--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -16,7 +16,7 @@
           [value]="effectivesDatasource"
           tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="effectivesDatasource.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage"
+            [rowsPerPageOptions]="rowsPerPageOptions"
         >
           <ng-template pTemplate="header">
             <tr>
