--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -17,7 +17,7 @@
           [value]="preparationsDatasource"
           tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="preparationsDatasource.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage" 
+            [rowsPerPageOptions]="rowsPerPageOptions" 
         >
           <ng-template pTemplate="header">
             <tr>
