--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -20,7 +20,7 @@
             [globalFilterFields]="['Templatename', 'Uniquecode', 'description','CreatedBy', 'status']"
              tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
+            [rowsPerPageOptions]="rowsPerPageOptions" >
              
                 <ng-template pTemplate="header">
                     <tr>
