--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -16,7 +16,7 @@
           <div class="p-4 bg-white shadow-dark rounded-2">
           <p-table  [value]="existingDocDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
           [paginator]="true" [totalRecords]="existingDocDatasource.length"
-          [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage" >
+          [rowsPerPageOptions]="rowsPerPageOptions" >
               <ng-template pTemplate="header">
                   <tr>
                       <th>#</th>
