--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -3,7 +3,7 @@
         <div class="col">
            
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1">Document Requests</h4>
+                <h4 class="page-title flex-grow-1" (click)="printf(requestsDatasource)" >Document Requests </h4>
                 <div class="d-flex page-title-actions">
                   <input type="text" class="form-control" placeholder="Search">
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
@@ -16,7 +16,7 @@
             <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table  [value]="requestsDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="requestsDatasource.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage" >
+            [rowsPerPageOptions]="rowsPerPageOptions" >
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
