--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="saveDocType(documentType)" #fm="ngForm">
+      <form (ngSubmit)="adddoctype(documentType)" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="description" class="col-sm-2 col-form-label">Description <span style="color: red; font-weight: bolder;">*</span> </label>
+            <label for="description" class="col-sm-2 col-form-label">Description  </label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="description"
@@ -53,26 +53,38 @@
                         rows="3"
                         placeholder="Description"
                         [(ngModel)]="documentType.Description" [disabled]="viewMode"
-                        required
-                       #descriptionInput="ngModel">
+                       >
                      
                       </textarea>
-                      <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
-                        Enter description.        
-                      </div>
+                      
             </div>
           </div>
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Assign to Department <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
-              <div>
-                <p-multiSelect [options]="departments" class="custom-ms" [(ngModel)]="selectedDepartments" [filter]="true" defaultLabel="Select a Department"
-                               name="department" id="department" display="chip" optionLabel="DepartmentName" optionValue="DepartmentName" [resetFilterOnHide]="true"
-                               #departmentInput="ngModel" [required]="true" [maxSelectedLabels]="2" [disabled]="viewMode">
+
+              <div *ngIf="viewMode">
+                <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department" name="department" id="department" optionLabel="DepartmentName" display="chip" [disabled]="viewMode">
+                  <ng-template pTemplate="selectedItems" let-options>
+                    <ng-container *ngTemplateOutlet="customTemplate; context: {$implicit: options}"></ng-container>
+                  </ng-template>
                 </p-multiSelect>
-                <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
-                  Enter department.
-                 </div>
+                <ng-template #customTemplate let-options>
+                  <div class="p-chips-container p-inputtext" *ngIf="departments && departments.length">
+                    <span class="p-chip p-highlight">{{ departments[0].DepartmentName }}</span>
+                    <span *ngIf="departments.length > 1" class="p-chip">+{{ departments.length - 1 }}</span>
+                  </div>
+                </ng-template>
+              </div>
+              <div *ngIf="!viewMode">
+                <p-multiSelect [options]="departments" [(ngModel)]="selectedDepartments" defaultLabel="Select a Department"
+                               name="department" id="department" optionLabel="DepartmentName"
+                               display="chip"   required
+                               #departmentInput="ngModel"  >
+                               <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
+                                Enter department.
+                               </div>      
+                </p-multiSelect>
               </div>
             </div>
           </div>
@@ -89,7 +101,7 @@
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && documentType.Status!='Approved'"  (click)="reject();" >Reject</button>
 
             
-            <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid || isSubmiting">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
             <button type="submit" class="btn btn-primary" *ngIf="editMode" [disabled]="!fm.form.valid">Update</button>
           </div>
         </div>
