--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -99,7 +99,7 @@
       </div>
       </form>
       <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
-        <h5 class="page-card-title">Header Row</h5> 
+        <h5 class="page-card-title">Title</h5> 
         <div class="template-block">
           <div class="template-grid">
             <ng-container *ngIf="showGrid">
