--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
@@ -140,7 +140,7 @@
             <div class="form-group row">
               <label for="bdoc" class="col-sm-2 col-form-label">Sample Template</label>
               <div class="col-sm-10">
-                <a href="assets/template.xlsx" target="_blank">Download Excel Sheet</a>
+                <a href="javascript: void(0)" (click)="export()">Download Excel Sheet</a>
               </div>
             </div>
 
