--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -79,65 +79,10 @@
                     </div>
           </div>
         </div>
-        <div class="form-group row">
-          <label for="templateName" class="col-sm-2 col-form-label">No. Of Pages <span style="color: red; font-weight: bolder;">*</span></label>
-          <div class="col-sm-10">
-            <input type="text"
-                   class="form-control mw-350"
-                   id="noofpages"
-                   name="noofpages"
-                   placeholder="No. of Pages"
-                   [(ngModel)]="templateForm.Pages" [disabled]="editMode"  (change)="generatePages()"
-                   required
-                     #noofpagesInput="ngModel"
-                      />
-                      <div *ngIf="noofpagesInput.invalid && (noofpagesInput.dirty || noofpagesInput.touched)" class="text-danger">
-                        Enter No. Of Pages
-                      </div>
-          </div>
-        </div>
       </div>
       </form>
       <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
-        <h5 class="page-card-title">Title</h5> 
-        <div class="template-block">
-          <div class="template-grid">
-            <ng-container *ngIf="showGrid">
-              <table class="w-100">
-                <tbody>
-                  <tr *ngFor="let row of headerData; let rowIndex = index">
-                    <ng-container *ngFor="let cell of row; let colIndex = index">
-                      <td>
-                        <div class="template-cell">
-                          <div class="custom-select" style="width: 84px; padding-right: 2px;">
-                            <select class="select-dropdown form-select"
-                            [(ngModel)]="headerData[rowIndex][colIndex].selectedOption">
-                              <option *ngFor="let option of selectOptions"
-                                      [value]="option.value">
-                                {{ option.name }}
-                              </option>
-                            </select>
-                          </div>
-                          <!-- <input [(ngModel)]="
-                          headerData[rowIndex][colIndex].inputValue
-                            " [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
-                                 class="form-control"
-                                 type="text" /> -->
-                                 <textarea class="form-control" [(ngModel)]="headerData[rowIndex][colIndex].inputValue" 
-                                 [placeholder]="headerData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
-                                  style="height: 1cm;"></textarea>
-                        </div>
-                      </td>
-                    </ng-container>
-                  </tr>
-                </tbody>
-              </table>
-            </ng-container>
-          </div>
-        </div>
-      </div>
-      <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
-        <h5 class="page-card-title">Header Template-(4 Col max.)</h5> 
+        <h5 class="page-card-title">Header Template</h5>
         <div class="template-block">
           <div class="template-grid">
             <ng-container *ngIf="showGrid">
@@ -147,9 +92,11 @@
                     <ng-container *ngFor="let cell of row; let colIndex = index">
                       <td>
                         <div class="template-cell">
-                          <div class="custom-select" style="width: 84px;">
+                          <div class="custom-select">
                             <select class="select-dropdown form-select"
-                            [(ngModel)]="gridData[rowIndex][colIndex].selectedOption">
+                                    [(ngModel)]="
+                                gridData[rowIndex][colIndex].selectedOption
+                              ">
                               <option *ngFor="let option of selectOptions"
                                       [value]="option.value">
                                 {{ option.name }}
@@ -158,7 +105,7 @@
                           </div>
                           <input [(ngModel)]="
                               gridData[rowIndex][colIndex].inputValue
-                            " [placeholder]="gridData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
+                            "
                                  class="form-control"
                                  type="text" />
                         </div>
@@ -188,7 +135,7 @@
       </div>
 
       <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
-        <h5 class="page-card-title">Footer Template-(4 Col max.)</h5>
+        <h5 class="page-card-title">Footer Template</h5>
         <div class="template-block">
           <div class="template-grid">
             <ng-container *ngIf="showGrid">
@@ -211,7 +158,7 @@
                           </div>
                           <input [(ngModel)]="
                             gridFooterData[rowIndex][colIndex].inputValue
-                            " [placeholder]="gridFooterData[rowIndex][colIndex].selectedOption === 1 ? 'Enter label' : 'Enter Value'"
+                            "
                                  class="form-control"
                                  type="text" />
                         </div>
@@ -239,29 +186,7 @@
           </div>
         </div>
       </div>
-      
-      <!-- <div class="p-4 mt-3 bg-white shadow-dark rounded-2" *ngFor="let page of pages; let i = index" [class.active]="currentPage === i">
-        <textarea  class="form-control page-textarea"  [(ngModel)]="page.text" placeholder="Page {{ i + 1 }}"></textarea>
-      </div> -->
 
-      <div class="p-4 mt-3 bg-white shadow-dark rounded-2">
-        <h5 class="page-card-title">Body Template</h5>
-        <div class="template-block">
-          <div class="template-grid">
-        <textarea class="form-control" [(ngModel)]="pages[currentPage].text" placeholder="Page {{ currentPage + 1 }}" style="height: 10cm;"></textarea>
-        </div>
-        </div>
-        <div class="form-group row my-4" style="margin-left: 29.666667%;">
-        <div class="col-sm-10 offset-sm-2">
-          <label for="templateName" class="col-sm-2 col-form-label">Page No. {{currentPage + 1}}</label>
-          <button class="btn btn-primary" (click)="prevPage()">Previous</button>
-          <button type="button"
-          class="btn btn-outline-secondary mx-2" (click)="nextPage()">Next</button>
-        </div>
-      </div>
-      </div>
-   
-      
       <div class="form-group row my-4">
         <div class="col-sm-10 offset-sm-2">
           <button type="button"
@@ -269,7 +194,7 @@
                   (click)="onCancel()">
             Cancel
           </button>
-          <button type="submit" class="btn btn-primary"  (click)="addTemplate()">Submit</button> 
+          <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" (click)="addTemplate()">Submit</button>
           <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="approve()">Approve</button>
           <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reinitiative()">Re-Initiative</button>
           <button type="button" class="col-xs-1 mx-8 offset-sm-1 btn btn-danger" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reject()">Reject</button>
