--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -9,7 +9,7 @@
             <div class="p-4 bg-white shadow-dark rounded-2">
             <p-table [value]="types" tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
+            [rowsPerPageOptions]="rowsPerPageOptions">
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
