--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/login/login.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/login/login.component.html
@@ -18,7 +18,7 @@
         <input
         #usernameInput
           type="text"
-          [(ngModel)]="username"
+          [(ngModel)]="user.UserID"
           id="username"
           name="username"
           class="form-control"
@@ -32,7 +32,7 @@
       <div class="floating-label-group">
         <input
           type="password"
-          [(ngModel)]="password"
+          [(ngModel)]="user.Password"
           id="password"
           name="password"
           class="form-control"
