--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -50,7 +50,7 @@
                 style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <p-dropdown name="workflow" [options]="workflowsSource" [(ngModel)]="request.workflow"
-                optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode" [required]="true"
+                optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode || editMode" [required]="true"
                 [autoDisplayFirst]="false" #WorkFlowInput="ngModel">
               </p-dropdown>
               <div *ngIf="WorkFlowInput.invalid && (WorkFlowInput.dirty || WorkFlowInput.touched)" class="text-danger">
