--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -52,14 +52,9 @@
                         name="description"
                         rows="3"
                         placeholder="Description"
-                        [(ngModel)]="documentType.Description" [disabled]="viewMode"
-                        required
-                       #descriptionInput="ngModel">
-                     
+                        [(ngModel)]="documentType.Description" [disabled]="viewMode">                     
                       </textarea>
-                      <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
-                        Enter description.        
-                      </div>
+                      
             </div>
           </div>
           <div class="form-group row">
