--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -92,9 +92,11 @@
             </div>
           </div>
 
+          <!-- <span style="color: red; font-weight: bolder;">*</span> -->
+
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label"
-              >Department <span style="color: red; font-weight: bolder;">*</span></label>
+              >Department </label>
             <div class="col-sm-10">
               <p-multiSelect
                 [options]="departs"
@@ -129,9 +131,10 @@
                 min="1"
                 placeholder="Select No. of Reviews"
                 [(ngModel)]="workflow.reviewsCount" readonly
-                required
-                #reviewsCountInput="ngModel"
+                
               />
+              <!-- required
+                #reviewsCountInput="ngModel" -->
                
     <!-- <div *ngIf="workflow.reviewsCount > 1" class="text-danger">
       Select Only One Reviwer.
