--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="description" class="col-sm-2 col-form-label">Description <span style="color: red; font-weight: bolder;">*</span> </label>
+            <label for="description" class="col-sm-2 col-form-label">Description  </label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="description"
