--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -39,10 +39,10 @@
                         <td>{{ i + 1 }}</td>  
                         <td>{{docItem.workflowName}}</td>
                         <td>{{docItem.documentstage}}</td>
-                        <td>{{docItem.documenttype}}</td>
+                        <td class="text-nowrap">{{docItem.documenttype}}</td>
                         <td>{{docItem.departments}}</td>
                         <td>{{docItem.CreatedBy}}</td>
-                        <td>{{docItem.CreatedDate}}</td>
+                        <td>{{docItem.CreatedDate | date}}</td>
                         <td><span class="status text-nowrap" [ngClass]="getStatusClass(docItem['Status'])">{{docItem.Status}} </span></td>
                         <td class="text-center"  *ngIf="access && !docItem?.IsParent"><i class="bi bi-pencil" (click)="editdoc(docItem)"></i></td>
                         <td *ngIf="!access"><b>Restricted</b></td>
