--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.scss
@@ -6,3 +6,8 @@
     height: unset;
     min-width: unset;
   }
+  // p-table td {
+  //   border: solid 1px #666;
+  //   width: 110px;
+  //   word-wrap: break-word;
+  // }
