--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -44,8 +44,9 @@
                         <!-- <td>{{docType?.approvedby}}</td>
                         <td>{{docType?.approvedOn| date}}</td> -->
                         <td><span class="status" [ngClass]="getStatusClass(docType['status'])">{{docType.status}} </span></td>
-                        <td class="text-center" *ngIf="access"><i *ngIf="docType?.status=='In-Progress'" (click)="editdocreq(docType)" class="bi bi-pencil"></i></td>
+                        <td class="text-center" *ngIf="access && docType?.status=='In-Progress'"><i (click)="editdocreq(docType)" class="bi bi-pencil"></i></td>
                         <td *ngIf="!access">Restricted</td>
+                        <td *ngIf="access && docType?.status=='Approved'"><b>Restricted</b></td>
                     </tr>
                 </ng-template>
             </p-table>
