--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -66,8 +66,9 @@
                   >{{ docPreperation.status }}
                 </span>
               </td>
-              <td class="text-center" *ngIf="access"><a (click)="navigateToAddPreparation(docPreperation)"><i *ngIf="docPreperation?.status=='In Progress' || docPreperation?.status=='IN-PROGRESS' || docPreperation?.status=='In-Progress'" class="bi bi-arrow-right"></i></a></td>
+              <td class="text-center" *ngIf="access && docPreperation?.status=='IN-PROGRESS'"><a (click)="navigateToAddPreparation(docPreperation)"><i  class="bi bi-arrow-right"></i></a></td>
               <td *ngIf="!access">Restricted</td>
+              <td *ngIf="access && docPreperation?.status=='Approved' || docPreperation?.status=='Reviewed'"><b>Restricted</b></td>
             </tr>
           </ng-template>
         </p-table>
