--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -58,12 +58,13 @@
                   >{{ effective.status }}
                 </span>
               </td>
-              <td class="text-center" *ngIf="access">
+              <td class="text-center" *ngIf="access && effective?.status=='IN-PROGRESS'">
                 <a (click)="navigateToReviewEffective(effective)"
                   ><i class="bi bi-arrow-right"></i
                 ></a>
               </td>
               <td *ngIf="!access">Restricted</td>
+              <td *ngIf="access && effective?.status=='Approved' || effective?.status=='Reviewed'"><b>Restricted</b></td>
             </tr>
           </ng-template>
         </p-table>
