--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -4,7 +4,7 @@
     <div class="col">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h4 class="page-title flex-grow-1">Document Print Request</h4>
+        <h4 class="page-title flex-grow-1">Document Repository</h4>
         <div class="d-flex page-title-actions">
           <input type="text" class="form-control" placeholder="Search" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')">
           <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()" *ngIf="access">New</button>
